vemos los post en el muro yujuuuuu

--- a/src/style.css
+++ b/src/style.css
@@ -193,3 +193,9 @@ background-color: aquamarine;
     margin: 5px;
 }
 
+.form{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    margin: 15px;
+}
