--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,17 @@
-body, html {
-   height: 100%;
-   background-image: url(viaje4.jpg);
-   background-size: 100% 100%;
-   background-repeat: no-repeat;
- 
+body,
+html {
+    height: 100%;
+    background-image: url(viaje4.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+
 }
+
 body {
-margin:0;
-display: flex;
-justify-content: center;
-align-items: center;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #root {
@@ -30,6 +32,7 @@ align-items: center;
     border-radius: 20px;
     font-size: 1.8rem;
 }
+
 .logo {
     display: flex;
     border-radius: 130px 130px 130px 130px;
@@ -39,6 +42,7 @@ align-items: center;
     margin: 20px;
     margin-top: -150px;
 }
+
 .inputHome {
     border-radius: 5px 5px 5px 5px;
     border: solid 2px black;
@@ -46,6 +50,7 @@ align-items: center;
     width: 249px;
     height: 35px;
 }
+
 .buttonLog {
     background-color: #1FC2D4;
     border: solid 2px black;
@@ -55,10 +60,11 @@ align-items: center;
     margin: 20px;
     font-size: 20px;
     box-shadow: 7px 7px 7px;
-    cursor:pointer;
+    cursor: pointer;
 }
-.buttonLog:hover{
-background-color: aquamarine;
+
+.buttonLog:hover {
+    background-color: aquamarine;
 }
 
 .buttonReg {
@@ -69,13 +75,13 @@ background-color: aquamarine;
     width: 108px;
     height: 21px;
     margin: 10px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .accessGoogle {
     background-image: url(../src/assets/solologoGoogle.png);
     background-size: 18%;
-    background-position:left;
+    background-position: left;
     background-repeat: no-repeat;
     border-radius: 5px 5px 5px 5px;
     padding: 7px;
@@ -83,8 +89,9 @@ background-color: aquamarine;
     height: 36px;
     font-size: 14px;
     text-align: right;
-    cursor:pointer;
+    cursor: pointer;
 }
+
 .buttonFor {
     background-color: rgba(111, 147, 163, 0.5);
     border: solid 2px rgba(111, 147, 163, 0.5);
@@ -93,8 +100,9 @@ background-color: aquamarine;
     width: 150px;
     height: 21px;
     margin: 10px;
-    cursor:pointer;
+    cursor: pointer;
 }
+
 /*------Página Register----*/
 .inputRegister {
     border-radius: 5px 5px 5px 5px;
@@ -103,6 +111,7 @@ background-color: aquamarine;
     width: 249px;
     height: 30px;
 }
+
 .logoRegister {
     display: flex;
     border-radius: 130px 130px 130px 130px;
@@ -111,6 +120,7 @@ background-color: aquamarine;
     box-shadow: 7px 7px 7px;
     margin-top: -130px;
 }
+
 .buttonBack {
     background-color: #8CDBE4;
     opacity: 85%;
@@ -120,12 +130,13 @@ background-color: aquamarine;
     position: fixed;
     margin-top: -730px;
     margin-left: -250px;
-    cursor:pointer;
+    cursor: pointer;
 }
-.buttonBack:hover{
+
+.buttonBack:hover {
     background-color: aquamarine;
-    }
-    
+}
+
 .registerHere {
     font-size: 36px;
     /*font-family: ;*/
@@ -134,6 +145,7 @@ background-color: aquamarine;
     margin: 0px;
     margin-left: 35px;
 }
+
 .buttonSingUp {
     background-color: #1FC2D4;
     border: solid 2px black;
@@ -143,12 +155,13 @@ background-color: aquamarine;
     margin: 20px;
     font-size: 20px;
     box-shadow: 7px 7px 7px;
-    cursor:pointer;
+    cursor: pointer;
 }
-.buttonSingUp:hover{
+
+.buttonSingUp:hover {
     background-color: aquamarine;
-    }
-    
+}
+
 /*------Página Forgot----*/
 .logoForgot {
     display: flex;
@@ -158,6 +171,7 @@ background-color: aquamarine;
     box-shadow: 7px 7px 7px;
     margin-top: -130px;
 }
+
 .forgotYourPassword {
     font-size: 26px;
     /*font-family: ;*/
@@ -166,6 +180,7 @@ background-color: aquamarine;
     margin: 2%;
     margin-left: 35px;
 }
+
 .buttonSave {
     background-color: #1FC2D4;
     border: solid 2px black;
@@ -175,12 +190,13 @@ background-color: aquamarine;
     margin: 20px;
     font-size: 20px;
     box-shadow: 7px 7px 7px;
-    cursor:pointer;
+    cursor: pointer;
 }
-.buttonSave:hover{
+
+.buttonSave:hover {
     background-color: aquamarine;
-    }
-    
+}
+
 .inputForgot {
     border-radius: 5px 5px 5px 5px;
     border: solid 2px black;
@@ -188,8 +204,8 @@ background-color: aquamarine;
     width: 249px;
     height: 30px;
 }
+
 .textForgot {
     font-size: 25px;
     margin: 5px;
 }
-
