--- a/src/style.css
+++ b/src/style.css
@@ -3,8 +3,9 @@ html {
     height: 100%;
     background-image: url(viaje4.jpg);
     background-size: 100% 100%;
-    background-repeat: no-repeat;
-
+   /* background-repeat: no-repeat;*/
+   background-attachment: fixed;
+   overflow: scroll;
 }
 
 body {
@@ -209,3 +210,143 @@ body {
     font-size: 25px;
     margin: 5px;
 }
+
+#root {
+    height: 100%;
+    width: 100%;
+}
+
+.divPadre {
+    height: 95%;
+    width: 70%;
+    
+}
+
+.welcome{
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.buttonHome {
+    background-color: #8CDBE4;
+    opacity: 85%;
+    width: 84px;
+    height: 29px;
+    border-radius: 5px;
+    /*position: fixed;*/
+    margin-top: -50%;
+    margin-left: 90%;
+    cursor: pointer;
+}
+
+.buttonHome:hover {
+    background-color: aquamarine;
+}
+
+/*----------Formulario------------*/
+.form {
+    display: flex;
+    flex-direction: column;
+    height: 15%;
+    width: auto;
+    background-color: #f1f1f1;
+    border-radius: 20px;
+    padding: 5%;
+    padding-top: 2%;
+    margin: 5%;
+    margin-left: 25%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+#title {
+    align-items: center;
+    font-size: 16px;
+    height: auto;
+    margin: 5;
+    margin-left: -2%;
+    outline: 0;
+    padding: 15px;
+    width: 100%;
+    background-color: #f1f1f1;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    margin-bottom: 15px;
+    border-radius: 100px;
+}
+
+#description {
+    align-items: center;
+    font-size: 16px;
+    height: auto;
+    margin: 5;
+    margin-left: -2%;
+    outline: 0;
+    padding: 15px;
+    width: 100%;
+    background-color: #f1f1f1;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    margin-bottom: 10px;
+    border-radius: 100px;
+}
+
+.buttonPost {
+    width: 130px;
+    height: 40px;
+    border-radius: 5px;
+    font-size: 20px;
+    background: #1FC2D4;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
+        7px 7px 20px 0px rgba(0, 0, 0, .1),
+        4px 4px 5px 0px rgba(0, 0, 0, .1);
+    outline: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
+    
+}
+
+
+/*---------Div de los post-----------*/
+.containerDataPost {
+    display: flex;
+    flex-direction: column;
+    margin-left: 25%;
+    height: auto;
+    width: auto;
+    background-color: rgba(241, 241, 241, 0.5);
+    border-radius: 20px;
+    padding: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+.containerPostview {
+    margin: 10px;
+    padding: 15px;
+    line-height: 0.9;
+    background-color: #f1f1f1;
+    border-radius: 20px;
+    
+}
+
+
+.bttnDelete{
+    position: relative;
+    margin-top: -5%;
+    margin-left: 80%;
+    
+}
+.btnEdit{
+    position: relative;
+    margin-top: -5%;
+    margin-left: 5%;
+}
+.sumLikes{
+    display:flex;
+    flex-wrap: wrap;
+    width: 5%;
+}
+
