--- a/src/style.css
+++ b/src/style.css
@@ -218,26 +218,27 @@ body {
 
 .divPadre {
     height: 95%;
-    width: 70%;
+    width: 85%;
     
 }
 
 .welcome{
     display: flex;
     justify-content: center;
-    font-size: 50px;
+    font-size: 2rem;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .buttonHome {
     background-color: #8CDBE4;
+    font-size: 1rem;
     opacity: 85%;
     width: 84px;
     height: 29px;
     border-radius: 5px;
-    /*position: fixed;*/
+    position: relative;
     margin-top: -50%;
-    margin-left: 90%;
+    margin-left: 75%;
     cursor: pointer;
 }
 
@@ -249,27 +250,25 @@ body {
 .form {
     display: flex;
     flex-direction: column;
-    height: 15%;
-    width: auto;
+    height: auto;
+    width: 60%;
     background-color: #f1f1f1;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 5%;
-    padding-top: 2%;
-    margin: 5%;
-    margin-left: 25%;
+    margin: 2%;
+    margin-left: 30%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+    font-size: 1.2rem;
 }
 
 #title {
-    align-items: center;
-    font-size: 16px;
+    
+    font-size: 1rem;
     height: auto;
-    margin: 5;
-    margin-left: -2%;
+    width: auto;
+    /*margin: 5;*/
     outline: 0;
-    padding: 15px;
-    width: 100%;
+    padding: 5%;
     background-color: #f1f1f1;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 15px;
@@ -277,25 +276,23 @@ body {
 }
 
 #description {
-    align-items: center;
-    font-size: 16px;
+    font-size: 1rem;
     height: auto;
-    margin: 5;
-    margin-left: -2%;
+    width: auto;
+    /*margin: 5;*/
     outline: 0;
-    padding: 15px;
-    width: 100%;
+    padding: 5%;
     background-color: #f1f1f1;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     border-radius: 100px;
 }
 
 .buttonPost {
-    width: 130px;
-    height: 40px;
+    width: 25%;
+    height: 10%;
     border-radius: 5px;
-    font-size: 20px;
+    font-size: 1rem;
     background: #1FC2D4;
     cursor: pointer;
     transition: all 0.3s ease;
@@ -305,7 +302,6 @@ body {
     outline: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
-    
 }
 
 
@@ -313,22 +309,22 @@ body {
 .containerDataPost {
     display: flex;
     flex-direction: column;
-    margin-left: 25%;
     height: auto;
     width: auto;
     background-color: rgba(241, 241, 241, 0.5);
-    border-radius: 20px;
-    padding: 20px;
+    border-radius: 10px;
+    padding: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+    
 }
 
 .containerPostview {
-    margin: 10px;
-    padding: 15px;
+    margin: 1%;
+    padding: 3%;
     line-height: 0.9;
     background-color: #f1f1f1;
-    border-radius: 20px;
+    border-radius: 5px;
+    font-size: 1rem;
     
 }
 
