--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,9 @@ html {
     height: 100%;
     background-image: url(viaje4.jpg);
     background-size: 100% 100%;
-   /* background-repeat: no-repeat;*/
-   background-attachment: fixed;
-   overflow: scroll;
+    /* background-repeat: no-repeat;*/
+    background-attachment: fixed;
+    overflow: scroll;
 }
 
 body {
@@ -219,14 +219,35 @@ body {
 .divPadre {
     height: 95%;
     width: 85%;
-    
+
 }
 
-.welcome{
+.banner {
     display: flex;
-    justify-content: center;
-    font-size: 2rem;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.logoPost {
+    position: relative;
+    border-radius: 100%;
+    width: 40%;
+    height: 40%;
+    box-shadow: 7px 7px 7px;
+}
+
+.welcome {
+    position: relative;
+    margin: 5%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-style: italic;
+    font-size: 1.6rem;
+}
+
+@media screen and (min-widht: 700px) {
+    .welcome {
+        font-size: 5rem;
+    }
 }
 
 .buttonHome {
@@ -251,22 +272,19 @@ body {
     display: flex;
     flex-direction: column;
     height: auto;
-    width: 60%;
+    width: auto;
     background-color: #f1f1f1;
     border-radius: 10px;
-    padding: 5%;
+    padding: 2%;
     margin: 2%;
-    margin-left: 30%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.2rem;
 }
 
 #title {
-    
     font-size: 1rem;
     height: auto;
     width: auto;
-    /*margin: 5;*/
     outline: 0;
     padding: 5%;
     background-color: #f1f1f1;
@@ -279,7 +297,6 @@ body {
     font-size: 1rem;
     height: auto;
     width: auto;
-    /*margin: 5;*/
     outline: 0;
     padding: 5%;
     background-color: #f1f1f1;
@@ -301,10 +318,7 @@ body {
         4px 4px 5px 0px rgba(0, 0, 0, .1);
     outline: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
 }
-
-
 /*---------Div de los post-----------*/
 .containerDataPost {
     display: flex;
@@ -315,7 +329,6 @@ body {
     border-radius: 10px;
     padding: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
 }
 
 .containerPostview {
@@ -325,24 +338,53 @@ body {
     background-color: #f1f1f1;
     border-radius: 5px;
     font-size: 1rem;
-    
 }
 
-
-.bttnDelete{
-    position: relative;
-    margin-top: -5%;
-    margin-left: 80%;
-    
-}
-.btnEdit{
-    position: relative;
-    margin-top: -5%;
-    margin-left: 5%;
-}
-.sumLikes{
-    display:flex;
+.containerBttn {
+    display: flex;
     flex-wrap: wrap;
-    width: 5%;
+    text-align: center;
 }
 
+.bttnlike {
+    width: 25%;
+    height: 10%;
+    margin: 1%;
+    border-radius: 10px;
+    font-size: 1rem;
+    background: #1FC2D4;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    outline: none;
+}
+
+.bttnDelete {
+    width: 25%;
+    height: 10%;
+    border-radius: 10px;
+    margin: 1%;
+    font-size: 1rem;
+    background: #FACDB7;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    outline: none;
+}
+
+.btnEdit {
+    width: 25%;
+    height: 10%;
+    border-radius: 10px;
+    margin: 1%;
+    font-size: 1rem;
+    background: #FACDB7;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    outline: none;
+}
+
+.sumLikes {
+    margin: 1%;
+    padding: 2%;
+    font-size: 1.1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
