--- a/src/style.css
+++ b/src/style.css
@@ -82,9 +82,11 @@ body {
 .accessGoogle {
     background-image: url(../src/assets/solologoGoogle.png);
     background-size: 18%;
+    background-color: white;
     background-position: left;
     background-repeat: no-repeat;
     border-radius: 5px 5px 5px 5px;
+    border: black;
     padding: 7px;
     width: 170px;
     height: 36px;
@@ -225,28 +227,33 @@ body {
 .banner {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    
 }
 
 .logoPost {
     position: relative;
     border-radius: 100%;
-    width: 40%;
-    height: 40%;
+    width: 200px;
+    height: 200px;
     box-shadow: 7px 7px 7px;
 }
 
 .welcome {
     position: relative;
-    margin: 5%;
+    margin-top: 7%;
+    margin-left: 5%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
-    font-size: 1.6rem;
+    font-size: 300%;
 }
 
-@media screen and (min-widht: 700px) {
+@media screen and (max-width: 700px) {
     .welcome {
-        font-size: 5rem;
+        font-size: 195%;
+    }
+    
+    .logoPost{
+        margin-left: 20%;
     }
 }
 
@@ -286,7 +293,7 @@ body {
     height: auto;
     width: auto;
     outline: 0;
-    padding: 5%;
+    padding: 2%;
     background-color: #f1f1f1;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 15px;
@@ -298,7 +305,7 @@ body {
     height: auto;
     width: auto;
     outline: 0;
-    padding: 5%;
+    padding: 2%;
     background-color: #f1f1f1;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
     margin-bottom: 15px;
@@ -319,6 +326,13 @@ body {
     outline: none;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+/*@media screen and (min-width: 700px){
+ .form{
+    
+    
+ }
+}*/
 /*---------Div de los post-----------*/
 .containerDataPost {
     display: flex;
