--- a/src/style.css
+++ b/src/style.css
@@ -70,17 +70,11 @@ body {
 }
 
 .buttonReg {
-    background-color: rgba(111, 147, 163, 0.8);
-    border: solid 1px #f1f1f1;
-    border-radius: 10px;
-    box-shadow: 7px 7px 7px;
-    font-size: 0.9rem;
-    font-style: italic;
-    width: 108px;
-    height: 21px;
-    margin: 5px;
-
+    font-size: 1rem;
     cursor: pointer;
+}
+.buttonReg:hover{
+    color:rgb(6, 6, 135);
 }
 
 .accessGoogle {
@@ -100,20 +94,17 @@ body {
     cursor: pointer;
     margin-bottom: 8%;
 }
-
+.accessGoogle:hover{
+    background-color: #d4dfe0;
+}
 .buttonFor {
-    background-color: rgba(111, 147, 163, 0.8);
-    border: solid 1px #f1f1f1;
-    border-radius: 10px;
-    box-shadow: 7px 7px 7px;
-    font-size: 0.9rem;
-    font-style: italic;
-    width: 150px;
-    height: 21px;
-    margin: 5px;
+   
+    font-size: 1rem;
     cursor: pointer;
 }
-
+.buttonFor:hover{
+    color:rgb(6, 6, 135);
+}
 /*------Página Register----*/
 .inputRegister {
     border-radius: 5px 5px 5px 5px;
@@ -221,7 +212,7 @@ body {
 
 .divPadre {
     height: 95%;
-    width: 85%;
+    width: 95%;
 }
 
 .banner {
@@ -249,9 +240,8 @@ body {
 .buttonHome {
     background-color: #f1463a;
     font-size: auto;
-    opacity: 90%;
     width: 20%;
-    height: 15%;
+    height: 30%;
     border-radius: 5px;
     position: relative;
     margin-left: 75%;
@@ -268,10 +258,10 @@ body {
     flex-direction: column;
     height: auto;
     width: auto;
-    background-color: #f1f1f1;
+    background-color: rgba(241, 241, 241, 0.8);
     border-radius: 10px;
     padding: 2%;
-    margin: 2%;
+    margin: 8%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.2rem;
 }
@@ -302,17 +292,18 @@ body {
 
 .buttonPost {
     width: 25%;
-    height: 10%;
+    height: 20%;
     border-radius: 5px;
     font-size: 1rem;
     background: #1FC2D4;
+    margin-left: 35%;
     cursor: pointer;
     transition: all 0.3s ease;
-    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
-        7px 7px 20px 0px rgba(0, 0, 0, .1),
-        4px 4px 5px 0px rgba(0, 0, 0, .1);
-    outline: none;
+    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.buttonPost:hover{
+ background-color: aquamarine;
 }
 
 /*---------Div de los post-----------*/
@@ -328,8 +319,10 @@ body {
 }
 
 .containerPostview {
+    height: 20%;
+    width: auto;
     margin: 1%;
-    padding: 3%;
+    padding: 2%;
     line-height: 0.9;
     background-color: #f1f1f1;
     border-radius: 5px;
@@ -343,47 +336,52 @@ body {
 }
 
 .bttnlike {
-    width: 25%;
-    height: 10%;
+    width: 30px;
+    height: 30px;
     margin: 1%;
     border-radius: 10px;
-    font-size: 1rem;
-    background: #1FC2D4;
+    border:#d4dfe0;
+    background-image: url(like_535285.png);
+    background-size: 30px;
     cursor: pointer;
     transition: all 0.3s ease;
     outline: none;
 }
+.bttnlike:hover{
+    background-image: url(heart_3482383.png);
+}
 
 .bttnDelete {
-    width: 25%;
-    height: 10%;
+    width: 25px;
+    height: 25px;
     border-radius: 5px;
+    border:#d4dfe0;
     margin: 1%;
     font-size: auto;
-    background:#f1463a;
+    background-image: url(delete_3363974.png);
+    background-size: 25px;
     cursor: pointer;
     transition: all 0.3s ease;
     outline: none;
 }
 
 .btnEdit {
-    width: 20%;
-    height: 10%;
+    width: 30px;
+    height: 30px;
     border-radius: 5px;
-    margin: 1%;
-    font-size: auto;
-    background: #d4dfe0;
+    border:#d4dfe0;
+    margin: 1% 1% 1% 60%;
+    background-image: url(edit_1159633.png);
+    background-size: 30px;
     cursor: pointer;
     transition: all 0.3s ease;
     outline: none;
 }
 
 .sumLikes {
-    width: 8%;
-    height: 10%;
-    margin: 1%;
-    justify-content: center;
-    font-size: 0.8rem;
+    
+    
+    font-size: 1rem;
 }
 
 @media screen and (max-width: 700px) {
@@ -398,15 +396,30 @@ body {
     .logoPost {
         margin-left: 17%;
     }
+    
 }
 
 @media screen and (min-width: 700px) {
     .divPadre {
         width: 62%;
     }
-
+    .home{
+        width: 50%;
+    }
     .buttonHome {
         margin-left: 90%;
+    }
+    
+    .inputHome {
+        border-radius: 5px ;
+        border: solid 2px black;
+        background-color: whitesmoke;
+        font-size: medium;
+        width: 60%;
+        height: 35px;
+    }
+    .accessGoogle{
+        margin-bottom: 3%;
     }
 
     .form {
@@ -414,9 +427,19 @@ body {
         width: auto;
         font-size: 1.3rem;
     }
-
+    #title{
+        width: auto;
+        height: 10px;
+    }
+    #description{
+        width: auto;
+        height: 20px;
+    }
     .containerDataPost {
         width: auto;
+    }
+    .btnEdit{
+        margin-left: 73%;
     }
 
 }
