--- a/src/style.css
+++ b/src/style.css
@@ -347,7 +347,7 @@ body {
     transition: all 0.3s ease;
     outline: none;
 }
-.bttnlike:hover{
+.bttnlike:active{
     background-image: url(heart_3482383.png);
 }
 
