--- a/src/style.css
+++ b/src/style.css
@@ -231,10 +231,10 @@ body {
    display: flex;
    flex-direction: column;
    border-radius: 100%;
-    width: 60%;
-    height: 50%;
+    width: 20%;
+    height: 20%;
     box-shadow: 7px 7px 7px;
-    margin-left: 20%;
+    margin-left: 10%;
 }
 
 .welcome {
@@ -244,7 +244,7 @@ body {
     margin-left: 5%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: italic;
-    font-size: 200%;
+    font-size: 4rem;
 }
 
 .buttonHome {
@@ -394,100 +394,37 @@ body {
     font-size: 1rem;
 }
 
-@media screen and (min-width: 1100px) {
-    .home{
-        height: 65%;
-        width: 50%;
-    
-}
-    .logo{
-        height: 70%;
-        width: 40%;
-        margin-top: -20%;
-    }
-    .inputHome{
-        width: 70%;
-        height: 8%;
-        font-size: 5rem;
-    }
-    .buttonLog{
-       
-    width: 25%;
-    height: 40%;
-    font-size: 4rem;
-    margin: 2%
-    
-    }
-    .buttonFor{
-        font-size: 3rem;
-    }
-    .buttonReg{
-        font-size: 3rem;
-    }
-    .accessGoogle{
-    width: 25%;
-    height: 40%;
-    font-size: 4rem;
-    margin-bottom: 1%;
-    
-    }
-    .textHome{
-        font-size: 5rem;
-        margin: 1%
-    }
-    
-    .banner{
-        display: flex;
-        flex-direction: column;
-        
-    }
-    
+
+@media screen and (max-width: 700px) {
     .welcome {
-        font-size: 200%;
+        font-size: 180%;
     }
 
     .buttonHome {
         margin-left: 75%;
-        width: auto;
-        height: 5%;
     }
 
     .logoPost {
-        margin-left: 25%;
         width: 50%;
         height: 50%;
+        margin-left: 17%;
     }
-    .btnEdit{
-        margin-left: 60%;
-    }
-    
 }
 
-@media screen and (min-width: 700px) and (max-width: 830px){
-   .home{
-    width:70%;
-    height: 40%;
-   }
+@media screen and ( min-width:700px) and (max-width: 850px){
+    .divPadre {
+        width: 62%;
+    }
+    .welcome {
+        font-size: 3rem;
+    }
+    .logoPost {
+        width: 50%;
+        height: 50%;
+        margin-left: 25%;
+    }
     .buttonHome {
-        margin-left: 80%;
-        width: auto;
-        height: 3%;
-    }
-    .banner{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .inputHome {
-        border-radius: 5px ;
-        border: solid 2px black;
-        background-color: whitesmoke;
-        font-size: medium;
-        width: 60%;
-        height: 35px;
-    }
-    .accessGoogle{
-        margin-bottom: 3%;
+        margin-left: 90%;
     }
 
     .form {
@@ -495,26 +432,13 @@ body {
         width: auto;
         font-size: 1.3rem;
     }
-    #title{
-        width: auto;
-        height: 10px;
-    }
-    #description{
-        width: auto;
-        height: 20px;
-    }
+
     .containerDataPost {
         width: auto;
     }
-    .btnEdit{
-        margin-left: 70%;
-    }
-    .logoPost{
-        height: 30%;
-        width: 30%;
-    }
 
-}*/
+}
+
 
 .footer {
     display: flex;
